provarAnt/00D190000000ZY2EAM/objects/SalesIQ__TemporaryRequest__c.object
<CustomObject>
    <description>This object is an object to store all temporary data.</description>
    <fields>
        <fullName>SalesIQ__Current_Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Position</label>
        <referenceTo>SalesIQ__Position__c</referenceTo>
        <relationshipLabel>TemporaryRequests</relationshipLabel>
        <relationshipName>TemporaryRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Destination_Territory__c</fullName>
        <label>Destination Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__District_Id__c</fullName>
        <label>District_Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__District__c</fullName>
        <label>District</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Moved_Account_Ids__c</fullName>
        <label>Moved Account Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Proposed_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TemporaryRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Region__c</fullName>
        <label>Region</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Request_Type__c</fullName>
        <label>Request_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Create &amp; Assign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Source_Territories__c</fullName>
        <label>Source Territories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Territory_Id__c</fullName>
        <label>Territory Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Territory_Name__c</fullName>
        <label>Territory Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>TemporaryRequest</label>
    <listViews>
        <fullName>SalesIQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Temporary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TemporaryRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>